--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   intl: ^0.16.1
+  flutter_local_notifications: ^4.0.1+2
+  get: ^3.26.0
 
 dev_dependencies:
   flutter_test:
