--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,15 @@ dependencies:
   intl: ^0.16.1
   flutter_local_notifications: ^4.0.1+2
   get: ^3.26.0
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.3.0
+  hive_generator: ^0.8.2
+  build_runner: ^1.11.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
