--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^3.26.0
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
+  uuid: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +41,7 @@ dev_dependencies:
   lint: ^1.3.0
   hive_generator: ^0.8.2
   build_runner: ^1.11.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
