--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,29 +18,30 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.3
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  intl: ^0.16.1
-  flutter_local_notifications: ^4.0.1+2
-  get: ^3.26.0
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
-  uuid: ^2.2.2
+ 
+  flutter_local_notifications: ^6.0.0
+  get: ^4.1.4
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  intl: ^0.17.0
+  uuid: ^3.0.4
 
 dev_dependencies:
+  build_runner: ^2.0.5
   flutter_test:
     sdk: flutter
-  lint: ^1.3.0
-  hive_generator: ^0.8.2
-  build_runner: ^1.11.1
+  hive_generator: ^1.1.0
+  lint: ^1.5.3
 
 
 # For information on the generic Dart part of this file, see the
